
              Add pamgetcolor.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add rgb-<maxval>:r/g/b color specification format.

              Pngtopam: Fix bogus warning of non-square pixels when image does
              not contain pixel resolution information.  Introduced in Netpbm
              10.48 (September 2009)

              libnetpbm: Add pnm_colorspec_rgb_integer,
              pnm_colorspec_rgb_norm, pnm_colorspec_rgb_x11,
              pnm_colorspec_dict, pnm_colorspec_dict_close.

              libnetpbm: Add pnm_parsecolor2.

              libnetpbm: Add pnm_allocpamtuplen, pnm_freepamtuplen.
              
              libnetpbm: Make the normalized tuple functions respect the
              allocation depth specified in struct pam (member
              'allocation_depth') instead of using the actual tuple depth
              (member 'depth').

              ilbmtoppm: Fix bug: may fail with bogus error message about an
              invalid CLUT chunk if image has a CLUT chunk.  Introduced after
              Netpbm 10.26 (January 2005) and at or before Netpbm 10.35
              (August 2006).

18.03.25 BJH  Release 10.82.00

              pbmtext: Add -wchar.

              pbmtext: Add -text-dump option.

              ppmhist: Add color summary to top of output, (except with
              -noheader).

              pnmremap: Add -randomseed.

              pnmquant: Add -norandom, -randomseed.

              pamtogif: Add -noclear option.

              giftopnm: Check "data width" value from GIF image properly:
              can't be bigger than 11, because the minimum code size is one
              more than the data width and the maximum code size is 12.  (Note
              that GIF spec prohibits anything more than 8).

              pnmpsnr: Add -targetX options.

              ppmrainbow: Add "ppmrainbow: " to error messages, like other
              programs.

              ppmrainbow: improve error message.
